# Naverlabs-LiDAR-API

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: benchmark.sh  benchmark.yaml  keti_param.yaml  kitti_autorun.sh  kitti_autorun2.sh  kitti_calc_tf.sh  kitti_gicp.sh  kitti_gicp3.sh  kitti_gicp5.sh  kitti_loop_autorun.sh  kitti_loop_autorun_for_degeneracy_v2.sh  kitti_loop_autorun_for_degeneracy_w_same_kps.sh  kitti_monorun.sh  kitti_param.yaml  kitti_save_fpfh_for_loop.sh  labs_autorun.sh  labs_param.yaml  loop_text_save.sh  map2map_reg.yaml  mapgen_param.yaml  set_params.sh  target_algorithm.yaml
include/: labsloader.hpp  nvutils.h  pose_utils.hpp  result_saver.hpp
launch/: lidar_publisher.launch  pub_lidar.launch
rviz/: erasor.rviz  fig_1_and_fig3_a.rviz  fig_3_b_cote.rviz  fig_3_b_raw.rviz  gicp_iterative.rviz  kitti_feature_matching_for_paper.rviz  kitti_loop_viz (copy).rviz  kitti_loop_viz.rviz  mapgen.rviz  nvlabs.rviz  registration.rviz  registration_for_video.rviz  srt.rviz  teaser_fig_1_and_fig3_a.rviz  teaser_fig_1_and_fig3_a_w_gt.rviz  teaser_fig_3_b_cote.rviz  teaser_fig_3_b_raw.rviz  traj.rviz
src/: data_publisher.cpp  nvutils.cpp
